src/objects/SMART_Data__c.object
<CustomObject>
    <fields>
        <fullName>Application_Complete__c</fullName>
        <label>Application Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Confirmed__c</fullName>
        <label>Application Confirmed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacity_Block__c</fullName>
        <label>Capacity Block</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LI &lt; 25</fullName>
                </value>
                <value>
                    <fullName>&lt; 25</fullName>
                </value>
                <value>
                    <fullName>&gt; 25 &lt; 250</fullName>
                </value>
                <value>
                    <fullName>&gt; 250 &lt; 500</fullName>
                </value>
                <value>
                    <fullName>&gt; 500 &lt; 1000</fullName>
                </value>
                <value>
                    <fullName>&gt; 1000 &lt; 5000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Energy_Storage_Adder__c</fullName>
        <formula>IF(AND(NOT(ISBLANK (TEXT( Energy_Storage_Capacity_kW__c))), NOT(ISBLANK(TEXT( Energy_Storage_Hours__c ))), NOT(ISBLANK( TEXT(Energy_Storage_Tranche__c )))), TEXT( Energy_Storage_Capacity_kW__c ) &amp; &quot; kW &quot; &amp; TEXT( Energy_Storage_Hours__c ) &amp; &quot; hours; Tranche &quot; &amp; TEXT( Energy_Storage_Tranche__c ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Storage Adder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Storage_Capacity_kW__c</fullName>
        <label>Energy Storage Capacity (kW)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energy_Storage_Hours__c</fullName>
        <label>Energy Storage Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energy_Storage_Tranche__c</fullName>
        <label>Energy Storage Tranche</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_End_Fee__c</fullName>
        <label>Extension End - Fee</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_End_GC__c</fullName>
        <label>Extension End - GC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_End_Legal__c</fullName>
        <label>Extension End - Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Fee_Paid__c</fullName>
        <label>Extension Fee Paid</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Fee__c</fullName>
        <label>Extension Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extension_Received_Fee__c</fullName>
        <label>Extension Received - Fee</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Received_GC__c</fullName>
        <label>Extension Received - GC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Received_IX__c</fullName>
        <label>Extension Received - IX</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Received_Legal__c</fullName>
        <label>Extension Received - Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Requested_Fee__c</fullName>
        <label>Extension Requested - Fee</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Requested_GC__c</fullName>
        <label>Extension Requested - GC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Requested_IX__c</fullName>
        <label>Extension Requested - IX</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Requested_Legal__c</fullName>
        <label>Extension Requested - Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Land_Use_Category__c</fullName>
        <label>Land Use Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Adder__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(TEXT( Location__c ))), NOT(ISBLANK(TEXT( Location_Tranche__c )))),
TEXT(Location__c) &amp; &quot; &quot; &amp; &quot;Tranche&quot; &amp; &quot; &quot; &amp;  TEXT(Location_Tranche__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Adder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Tranche__c</fullName>
        <label>Location Tranche</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>Float</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>LF</fullName>
                </value>
                <value>
                    <fullName>Can</fullName>
                </value>
                <value>
                    <fullName>Ag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offtake_Adder__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(TEXT( Offtake__c ))), NOT(ISBLANK(TEXT(Offtake_Tranche__c)))),
TEXT( Offtake__c ) &amp; &quot; &quot; &amp; &quot;Tranche&quot; &amp; &quot; &quot; &amp; TEXT( Offtake_Tranche__c ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offtake Adder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offtake_Tranche__c</fullName>
        <label>Offtake Tranche</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offtake__c</fullName>
        <label>Offtake</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>LIP</fullName>
                </value>
                <value>
                    <fullName>LICS</fullName>
                </value>
                <value>
                    <fullName>Pub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reservation_End__c</fullName>
        <label>Reservation End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reservation_Fee_Due__c</fullName>
        <label>Reservation Fee Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reservation_Fee_Paid__c</fullName>
        <label>Reservation Fee Paid</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reservation_Fee__c</fullName>
        <label>Reservation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reservation_Period_Documentation__c</fullName>
        <label>Reservation Period Documentation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reservation_Start__c</fullName>
        <label>Reservation Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMART_ID__c</fullName>
        <label>SMART ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMART_Status__c</fullName>
        <label>SMART Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Extended - Fee</fullName>
                </value>
                <value>
                    <fullName>Extended - Legal</fullName>
                </value>
                <value>
                    <fullName>Extended - IX</fullName>
                </value>
                <value>
                    <fullName>Extended - GC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking_Adder__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(TEXT( Tracking__c ))), NOT(ISBLANK(TEXT( Tracking_Tranche__c )))), TEXT( Tracking__c ) &amp; &quot; &quot; &amp; &quot;Tranche &quot; &amp; TEXT( Tracking_Tranche__c ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking Adder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Tranche__c</fullName>
        <label>Tracking Tranche</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <label>Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SMART Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SMART Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMART Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>